# XRayMOD

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  PROTOCOLS.md  PUBLISH.md  README.fa.md  README.md  ROADMAP.md  SECURITY.md  agent.md  build-worker.sh  design.md  index.html  install.cmd  install.ps1  install.sh  metadata.json  package-lock.json  package.json  plan.md  pyproject.toml  server.ts  setup.sh  test-offline.sh  tsconfig.json  vite.config.ts  worker.js  wrangler.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.opencode/: architecture.md  config.json  deployment.md  endpoints.md  libraries.md  stealth.md  ui-checklist.md  workflow.md
backend/: auth.py  config.py  database.py  main.py  schema.sql
backend/routers/: backends.py  cleanip.py  configs.py  health.py  login.py  logout.py  nodes.py  protocols.py  settings.py  (+2 more)
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
installer/: __main__.py  app.py  cf_api.py  cli_deploy.py  config.py  deployer.py  install.py  pipeline.py
scripts/: e2e-local.mjs  smoke-test.mjs
server/: protocolManager.ts  ssh.ts
src/: App.tsx  LEGACY.md  index.css  main.tsx  protocolTemplates.ts
wizard/: index.ts  wrangler.toml
worker/: auth.ts  disguise.ts  index.ts  install.ts  intent.ts  nova-worker.js  panel-login.ts  router.ts  schema.ts  static.ts  subscription.ts  types.ts  user-portal.ts  utils.ts
(+49 files in other folders)
